[project]
name = "cui-lumina2-teacache"
description = "comfy extension for lumina2 TeaCache"
version = "1.0.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/spawner1145/CUI-Lumina2-TeaCache"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "spawner"
DisplayName = "CUI-Lumina2-TeaCache"
Icon = ""
includes = []
